Summary: Fix vertical shifting issue in AuthPhoneNumber

--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -2,6 +2,15 @@
   height: 100%;
 }
 
+.custom-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+}
+
 .auth-form {
   width: 100%;
   max-width: 25.5rem;
